pkg/grammar.go
package lexicalanalyser

// Code generated by peg -switch -inline -strict -output pkg/grammar.go pkg/grammar.peg DO NOT EDIT.

import (
	"fmt"
	"io"
	"os"
	"sort"
	"strconv"
)

const endSymbol rune = 1114112

/* The rule types inferred from the grammar are below. */
type pegRule uint8

const (
	ruleUnknown pegRule = iota
	rulefirst
	ruleFUNCTIONS
	ruleFUNCTION
	rulePARAMS_VARS
	ruleVAR_LIST
	ruleVAR_LIST1
	ruleTYPE
	ruleBODY
	ruleSTATEMENTS
	ruleSTATEMENT
	ruleIF_STATEMENT
	ruleWHILE_STATEMENT
	rulePRINT_STATEMENT
	ruleELSECLAUSE
	ruleRETURN_CLAUSE
	ruleVALUE
	ruleEXPR_VALUE
	ruleBOOL_EXPR_VALUE
	ruleINDEXED
	ruleINDEXABLE
	ruleBOOL_EXPRESSION
	ruleBOOL_EXPRESSION1
	ruleBOOL_OP
	ruleASSIGNMENT
	ruleFUNC_CALL
	ruleEXPRESSION
	ruleEXPRESSION1
	ruleOP
	ruleASSIGNABLE
	ruleID
	ruleFIRST_CHAR
	ruleID1
	ruleINTEGER
	ruleBOOLEAN
	ruleTEXT
	ruleSTRING
	ruleCHARS_IN_STRING
	ruleINT
	ruleARRAY
	ruleARRAY_CONTENT
	ruleARRAY_CONTENT1
	ruleMAP
	ruleKEY_VALUE_PAIRS
	ruleKEY_VALUE_PAIRS1
	ruleWHITESPACE_AT_LEAST_ONE
	ruleWHITESPACE_ANY
	ruleWHITESPACEC
	ruleAT_LEAST_ONE_SPACE
	ruleJUST_SPACES
)

var rul3s = [...]string{
	"Unknown",
	"first",
	"FUNCTIONS",
	"FUNCTION",
	"PARAMS_VARS",
	"VAR_LIST",
	"VAR_LIST1",
	"TYPE",
	"BODY",
	"STATEMENTS",
	"STATEMENT",
	"IF_STATEMENT",
	"WHILE_STATEMENT",
	"PRINT_STATEMENT",
	"ELSECLAUSE",
	"RETURN_CLAUSE",
	"VALUE",
	"EXPR_VALUE",
	"BOOL_EXPR_VALUE",
	"INDEXED",
	"INDEXABLE",
	"BOOL_EXPRESSION",
	"BOOL_EXPRESSION1",
	"BOOL_OP",
	"ASSIGNMENT",
	"FUNC_CALL",
	"EXPRESSION",
	"EXPRESSION1",
	"OP",
	"ASSIGNABLE",
	"ID",
	"FIRST_CHAR",
	"ID1",
	"INTEGER",
	"BOOLEAN",
	"TEXT",
	"STRING",
	"CHARS_IN_STRING",
	"INT",
	"ARRAY",
	"ARRAY_CONTENT",
	"ARRAY_CONTENT1",
	"MAP",
	"KEY_VALUE_PAIRS",
	"KEY_VALUE_PAIRS1",
	"WHITESPACE_AT_LEAST_ONE",
	"WHITESPACE_ANY",
	"WHITESPACEC",
	"AT_LEAST_ONE_SPACE",
	"JUST_SPACES",
}

type token32 struct {
	pegRule
	begin, end uint32
}

func (t *token32) String() string {
	return fmt.Sprintf("\x1B[34m%v\x1B[m %v %v", rul3s[t.pegRule], t.begin, t.end)
}

type node32 struct {
	token32
	up, next *node32
}

func (node *node32) print(w io.Writer, pretty bool, buffer string) {
	var print func(node *node32, depth int)
	print = func(node *node32, depth int) {
		for node != nil {
			for c := 0; c < depth; c++ {
				fmt.Fprintf(w, " ")
			}
			rule := rul3s[node.pegRule]
			quote := strconv.Quote(string(([]rune(buffer)[node.begin:node.end])))
			if !pretty {
				fmt.Fprintf(w, "%v %v\n", rule, quote)
			} else {
				fmt.Fprintf(w, "\x1B[34m%v\x1B[m %v\n", rule, quote)
			}
			if node.up != nil {
				print(node.up, depth+1)
			}
			node = node.next
		}
	}
	print(node, 0)
}

func (node *node32) Print(w io.Writer, buffer string) {
	node.print(w, false, buffer)
}

func (node *node32) PrettyPrint(w io.Writer, buffer string) {
	node.print(w, true, buffer)
}

type tokens32 struct {
	tree []token32
}

func (t *tokens32) Trim(length uint32) {
	t.tree = t.tree[:length]
}

func (t *tokens32) Print() {
	for _, token := range t.tree {
		fmt.Println(token.String())
	}
}

func (t *tokens32) AST() *node32 {
	type element struct {
		node *node32
		down *element
	}
	tokens := t.Tokens()
	var stack *element
	for _, token := range tokens {
		if token.begin == token.end {
			continue
		}
		node := &node32{token32: token}
		for stack != nil && stack.node.begin >= token.begin && stack.node.end <= token.end {
			stack.node.next = node.up
			node.up = stack.node
			stack = stack.down
		}
		stack = &element{node: node, down: stack}
	}
	if stack != nil {
		return stack.node
	}
	return nil
}

func (t *tokens32) PrintSyntaxTree(buffer string) {
	t.AST().Print(os.Stdout, buffer)
}

func (t *tokens32) WriteSyntaxTree(w io.Writer, buffer string) {
	t.AST().Print(w, buffer)
}

func (t *tokens32) PrettyPrintSyntaxTree(buffer string) {
	t.AST().PrettyPrint(os.Stdout, buffer)
}

func (t *tokens32) Add(rule pegRule, begin, end, index uint32) {
	tree, i := t.tree, int(index)
	if i >= len(tree) {
		t.tree = append(tree, token32{pegRule: rule, begin: begin, end: end})
		return
	}
	tree[i] = token32{pegRule: rule, begin: begin, end: end}
}

func (t *tokens32) Tokens() []token32 {
	return t.tree
}

type MyParser struct {
	Buffer string
	buffer []rune
	rules  [50]func() bool
	parse  func(rule ...int) error
	reset  func()
	Pretty bool
	tokens32
}

func (p *MyParser) Parse(rule ...int) error {
	return p.parse(rule...)
}

func (p *MyParser) Reset() {
	p.reset()
}

type textPosition struct {
	line, symbol int
}

type textPositionMap map[int]textPosition

func translatePositions(buffer []rune, positions []int) textPositionMap {
	length, translations, j, line, symbol := len(positions), make(textPositionMap, len(positions)), 0, 1, 0
	sort.Ints(positions)

search:
	for i, c := range buffer {
		if c == '\n' {
			line, symbol = line+1, 0
		} else {
			symbol++
		}
		if i == positions[j] {
			translations[positions[j]] = textPosition{line, symbol}
			for j++; j < length; j++ {
				if i != positions[j] {
					continue search
				}
			}
			break search
		}
	}

	return translations
}

type parseError struct {
	p   *MyParser
	max token32
}

func (e *parseError) Error() string {
	tokens, err := []token32{e.max}, "\n"
	positions, p := make([]int, 2*len(tokens)), 0
	for _, token := range tokens {
		positions[p], p = int(token.begin), p+1
		positions[p], p = int(token.end), p+1
	}
	translations := translatePositions(e.p.buffer, positions)
	format := "parse error near %v (line %v symbol %v - line %v symbol %v):\n%v\n"
	if e.p.Pretty {
		format = "parse error near \x1B[34m%v\x1B[m (line %v symbol %v - line %v symbol %v):\n%v\n"
	}
	for _, token := range tokens {
		begin, end := int(token.begin), int(token.end)
		err += fmt.Sprintf(format,
			rul3s[token.pegRule],
			translations[begin].line, translations[begin].symbol,
			translations[end].line, translations[end].symbol,
			strconv.Quote(string(e.p.buffer[begin:end])))
	}

	return err
}

func (p *MyParser) PrintSyntaxTree() {
	if p.Pretty {
		p.tokens32.PrettyPrintSyntaxTree(p.Buffer)
	} else {
		p.tokens32.PrintSyntaxTree(p.Buffer)
	}
}

func (p *MyParser) WriteSyntaxTree(w io.Writer) {
	p.tokens32.WriteSyntaxTree(w, p.Buffer)
}

func Pretty(pretty bool) func(*MyParser) error {
	return func(p *MyParser) error {
		p.Pretty = pretty
		return nil
	}
}

func Size(size int) func(*MyParser) error {
	return func(p *MyParser) error {
		p.tokens32 = tokens32{tree: make([]token32, 0, size)}
		return nil
	}
}
func (p *MyParser) Init(options ...func(*MyParser) error) error {
	var (
		max                  token32
		position, tokenIndex uint32
		buffer               []rune
	)
	for _, option := range options {
		err := option(p)
		if err != nil {
			return err
		}
	}
	p.reset = func() {
		max = token32{}
		position, tokenIndex = 0, 0

		p.buffer = []rune(p.Buffer)
		if len(p.buffer) == 0 || p.buffer[len(p.buffer)-1] != endSymbol {
			p.buffer = append(p.buffer, endSymbol)
		}
		buffer = p.buffer
	}
	p.reset()

	_rules := p.rules
	tree := p.tokens32
	p.parse = func(rule ...int) error {
		r := 1
		if len(rule) > 0 {
			r = rule[0]
		}
		matches := p.rules[r]()
		p.tokens32 = tree
		if matches {
			p.Trim(tokenIndex)
			return nil
		}
		return &parseError{p, max}
	}

	add := func(rule pegRule, begin uint32) {
		tree.Add(rule, begin, position, tokenIndex)
		tokenIndex++
		if begin != position && position > max.end {
			max = token32{rule, begin, position}
		}
	}

	matchDot := func() bool {
		if buffer[position] != endSymbol {
			position++
			return true
		}
		return false
	}

	/*matchChar := func(c byte) bool {
		if buffer[position] == c {
			position++
			return true
		}
		return false
	}*/

	/*matchRange := func(lower byte, upper byte) bool {
		if c := buffer[position]; c >= lower && c <= upper {
			position++
			return true
		}
		return false
	}*/

	_rules = [...]func() bool{
		nil,
		/* 0 first <- <('g' 'l' 'o' 'b' 'a' 'l' 's' WHITESPACE_AT_LEAST_ONE PARAMS_VARS* ('e' 'n' 'd' 'g' 'l' 'o' 'b' 'a' 'l' 's') WHITESPACE_AT_LEAST_ONE FUNCTIONS ('m' 'a' 'i' 'n') WHITESPACE_ANY BODY ('e' 'n' 'd' 'm' 'a' 'i' 'n') WHITESPACE_ANY !.)> */
		func() bool {
			position0, tokenIndex0 := position, tokenIndex
			{
				position1 := position
				if buffer[position] != rune('g') {
					goto l0
				}
				position++
				if buffer[position] != rune('l') {
					goto l0
				}
				position++
				if buffer[position] != rune('o') {
					goto l0
				}
				position++
				if buffer[position] != rune('b') {
					goto l0
				}
				position++
				if buffer[position] != rune('a') {
					goto l0
				}
				position++
				if buffer[position] != rune('l') {
					goto l0
				}
				position++
				if buffer[position] != rune('s') {
					goto l0
				}
				position++
				if !_rules[ruleWHITESPACE_AT_LEAST_ONE]() {
					goto l0
				}
			l2:
				{
					position3, tokenIndex3 := position, tokenIndex
					if !_rules[rulePARAMS_VARS]() {
						goto l3
					}
					goto l2
				l3:
					position, tokenIndex = position3, tokenIndex3
				}
				if buffer[position] != rune('e') {
					goto l0
				}
				position++
				if buffer[position] != rune('n') {
					goto l0
				}
				position++
				if buffer[position] != rune('d') {
					goto l0
				}
				position++
				if buffer[position] != rune('g') {
					goto l0
				}
				position++
				if buffer[position] != rune('l') {
					goto l0
				}
				position++
				if buffer[position] != rune('o') {
					goto l0
				}
				position++
				if buffer[position] != rune('b') {
					goto l0
				}
				position++
				if buffer[position] != rune('a') {
					goto l0
				}
				position++
				if buffer[position] != rune('l') {
					goto l0
				}
				position++
				if buffer[position] != rune('s') {
					goto l0
				}
				position++
				if !_rules[ruleWHITESPACE_AT_LEAST_ONE]() {
					goto l0
				}
				{
					position4 := position
				l5:
					{
						position6, tokenIndex6 := position, tokenIndex
						{
							position7 := position
							if buffer[position] != rune('f') {
								goto l6
							}
							position++
							if buffer[position] != rune('u') {
								goto l6
							}
							position++
							if buffer[position] != rune('n') {
								goto l6
							}
							position++
							if buffer[position] != rune('c') {
								goto l6
							}
							position++
							if !_rules[ruleAT_LEAST_ONE_SPACE]() {
								goto l6
							}
							if !_rules[ruleID]() {
								goto l6
							}
							if !_rules[ruleJUST_SPACES]() {
								goto l6
							}
							if buffer[position] != rune('(') {
								goto l6
							}
							position++
							if !_rules[ruleWHITESPACE_ANY]() {
								goto l6
							}
						l8:
							{
								position9, tokenIndex9 := position, tokenIndex
								if !_rules[rulePARAMS_VARS]() {
									goto l9
								}
								goto l8
							l9:
								position, tokenIndex = position9, tokenIndex9
							}
							if buffer[position] != rune(')') {
								goto l6
							}
							position++
							if !_rules[ruleJUST_SPACES]() {
								goto l6
							}
							if buffer[position] != rune(':') {
								goto l6
							}
							position++
							if !_rules[ruleJUST_SPACES]() {
								goto l6
							}
							if !_rules[ruleTYPE]() {
								goto l6
							}
							if !_rules[ruleWHITESPACE_ANY]() {
								goto l6
							}
							if !_rules[ruleBODY]() {
								goto l6
							}
							add(ruleFUNCTION, position7)
						}
						goto l5
					l6:
						position, tokenIndex = position6, tokenIndex6
					}
					add(ruleFUNCTIONS, position4)
				}
				if buffer[position] != rune('m') {
					goto l0
				}
				position++
				if buffer[position] != rune('a') {
					goto l0
				}
				position++
				if buffer[position] != rune('i') {
					goto l0
				}
				position++
				if buffer[position] != rune('n') {
					goto l0
				}
				position++
				if !_rules[ruleWHITESPACE_ANY]() {
					goto l0
				}
				if !_rules[ruleBODY]() {
					goto l0
				}
				if buffer[position] != rune('e') {
					goto l0
				}
				position++
				if buffer[position] != rune('n') {
					goto l0
				}
				position++
				if buffer[position] != rune('d') {
					goto l0
				}
				position++
				if buffer[position] != rune('m') {
					goto l0
				}
				position++
				if buffer[position] != rune('a') {
					goto l0
				}
				position++
				if buffer[position] != rune('i') {
					goto l0
				}
				position++
				if buffer[position] != rune('n') {
					goto l0
				}
				position++
				if !_rules[ruleWHITESPACE_ANY]() {
					goto l0
				}
				{
					position10, tokenIndex10 := position, tokenIndex
					if !matchDot() {
						goto l10
					}
					goto l0
				l10:
					position, tokenIndex = position10, tokenIndex10
				}
				add(rulefirst, position1)
			}
			return true
		l0:
			position, tokenIndex = position0, tokenIndex0
			return false
		},
		/* 1 FUNCTIONS <- <FUNCTION*> */
		nil,
		/* 2 FUNCTION <- <('f' 'u' 'n' 'c' AT_LEAST_ONE_SPACE ID JUST_SPACES '(' WHITESPACE_ANY PARAMS_VARS* ')' JUST_SPACES ':' JUST_SPACES TYPE WHITESPACE_ANY BODY)> */
		nil,
		/* 3 PARAMS_VARS <- <(TYPE JUST_SPACES '[' JUST_SPACES VAR_LIST ']' WHITESPACE_ANY PARAMS_VARS* WHITESPACE_ANY)> */
		func() bool {
			position13, tokenIndex13 := position, tokenIndex
			{
				position14 := position
				if !_rules[ruleTYPE]() {
					goto l13
				}
				if !_rules[ruleJUST_SPACES]() {
					goto l13
				}
				if buffer[position] != rune('[') {
					goto l13
				}
				position++
				if !_rules[ruleJUST_SPACES]() {
					goto l13
				}
				if !_rules[ruleVAR_LIST]() {
					goto l13
				}
				if buffer[position] != rune(']') {
					goto l13
				}
				position++
				if !_rules[ruleWHITESPACE_ANY]() {
					goto l13
				}
			l15:
				{
					position16, tokenIndex16 := position, tokenIndex
					if !_rules[rulePARAMS_VARS]() {
						goto l16
					}
					goto l15
				l16:
					position, tokenIndex = position16, tokenIndex16
				}
				if !_rules[ruleWHITESPACE_ANY]() {
					goto l13
				}
				add(rulePARAMS_VARS, position14)
			}
			return true
		l13:
			position, tokenIndex = position13, tokenIndex13
			return false
		},
		/* 4 VAR_LIST <- <(ID VAR_LIST1*)> */
		func() bool {
			position17, tokenIndex17 := position, tokenIndex
			{
				position18 := position
				if !_rules[ruleID]() {
					goto l17
				}
			l19:
				{
					position20, tokenIndex20 := position, tokenIndex
					if !_rules[ruleVAR_LIST1]() {
						goto l20
					}
					goto l19
				l20:
					position, tokenIndex = position20, tokenIndex20
				}
				add(ruleVAR_LIST, position18)
			}
			return true
		l17:
			position, tokenIndex = position17, tokenIndex17
			return false
		},
		/* 5 VAR_LIST1 <- <(JUST_SPACES ',' JUST_SPACES VAR_LIST VAR_LIST1*)> */
		func() bool {
			position21, tokenIndex21 := position, tokenIndex
			{
				position22 := position
				if !_rules[ruleJUST_SPACES]() {
					goto l21
				}
				if buffer[position] != rune(',') {
					goto l21
				}
				position++
				if !_rules[ruleJUST_SPACES]() {
					goto l21
				}
				if !_rules[ruleVAR_LIST]() {
					goto l21
				}
			l23:
				{
					position24, tokenIndex24 := position, tokenIndex
					if !_rules[ruleVAR_LIST1]() {
						goto l24
					}
					goto l23
				l24:
					position, tokenIndex = position24, tokenIndex24
				}
				add(ruleVAR_LIST1, position22)
			}
			return true
		l21:
			position, tokenIndex = position21, tokenIndex21
			return false
		},
		/* 6 TYPE <- <((&('v') ('v' 'o' 'i' 'd')) | (&('b') ('b' 'o' 'o' 'l')) | (&('m') ('m' 'a' 'p' '[' TYPE ']' TYPE)) | (&('[') ('[' [0-9]+ ']' TYPE)) | (&('i') ('i' 'n' 't')) | (&('s') ('s' 't' 'r' 'i' 'n' 'g')))> */
		func() bool {
			position25, tokenIndex25 := position, tokenIndex
			{
				position26 := position
				{
					switch buffer[position] {
					case 'v':
						if buffer[position] != rune('v') {
							goto l25
						}
						position++
						if buffer[position] != rune('o') {
							goto l25
						}
						position++
						if buffer[position] != rune('i') {
							goto l25
						}
						position++
						if buffer[position] != rune('d') {
							goto l25
						}
						position++
					case 'b':
						if buffer[position] != rune('b') {
							goto l25
						}
						position++
						if buffer[position] != rune('o') {
							goto l25
						}
						position++
						if buffer[position] != rune('o') {
							goto l25
						}
						position++
						if buffer[position] != rune('l') {
							goto l25
						}
						position++
					case 'm':
						if buffer[position] != rune('m') {
							goto l25
						}
						position++
						if buffer[position] != rune('a') {
							goto l25
						}
						position++
						if buffer[position] != rune('p') {
							goto l25
						}
						position++
						if buffer[position] != rune('[') {
							goto l25
						}
						position++
						if !_rules[ruleTYPE]() {
							goto l25
						}
						if buffer[position] != rune(']') {
							goto l25
						}
						position++
						if !_rules[ruleTYPE]() {
							goto l25
						}
					case '[':
						if buffer[position] != rune('[') {
							goto l25
						}
						position++
						if c := buffer[position]; c < rune('0') || c > rune('9') {
							goto l25
						}
						position++
					l28:
						{
							position29, tokenIndex29 := position, tokenIndex
							if c := buffer[position]; c < rune('0') || c > rune('9') {
								goto l29
							}
							position++
							goto l28
						l29:
							position, tokenIndex = position29, tokenIndex29
						}
						if buffer[position] != rune(']') {
							goto l25
						}
						position++
						if !_rules[ruleTYPE]() {
							goto l25
						}
					case 'i':
						if buffer[position] != rune('i') {
							goto l25
						}
						position++
						if buffer[position] != rune('n') {
							goto l25
						}
						position++
						if buffer[position] != rune('t') {
							goto l25
						}
						position++
					default:
						if buffer[position] != rune('s') {
							goto l25
						}
						position++
						if buffer[position] != rune('t') {
							goto l25
						}
						position++
						if buffer[position] != rune('r') {
							goto l25
						}
						position++
						if buffer[position] != rune('i') {
							goto l25
						}
						position++
						if buffer[position] != rune('n') {
							goto l25
						}
						position++
						if buffer[position] != rune('g') {
							goto l25
						}
						position++
					}
				}

				add(ruleTYPE, position26)
			}
			return true
		l25:
			position, tokenIndex = position25, tokenIndex25
			return false
		},
		/* 7 BODY <- <('{' WHITESPACE_ANY PARAMS_VARS* ';' WHITESPACE_ANY STATEMENTS* RETURN_CLAUSE? WHITESPACE_ANY '}' WHITESPACE_ANY)> */
		func() bool {
			position30, tokenIndex30 := position, tokenIndex
			{
				position31 := position
				if buffer[position] != rune('{') {
					goto l30
				}
				position++
				if !_rules[ruleWHITESPACE_ANY]() {
					goto l30
				}
			l32:
				{
					position33, tokenIndex33 := position, tokenIndex
					if !_rules[rulePARAMS_VARS]() {
						goto l33
					}
					goto l32
				l33:
					position, tokenIndex = position33, tokenIndex33
				}
				if buffer[position] != rune(';') {
					goto l30
				}
				position++
				if !_rules[ruleWHITESPACE_ANY]() {
					goto l30
				}
			l34:
				{
					position35, tokenIndex35 := position, tokenIndex
					if !_rules[ruleSTATEMENTS]() {
						goto l35
					}
					goto l34
				l35:
					position, tokenIndex = position35, tokenIndex35
				}
				{
					position36, tokenIndex36 := position, tokenIndex
					{
						position38 := position
						if !_rules[ruleWHITESPACE_ANY]() {
							goto l36
						}
						if buffer[position] != rune('r') {
							goto l36
						}
						position++
						if buffer[position] != rune('e') {
							goto l36
						}
						position++
						if buffer[position] != rune('t') {
							goto l36
						}
						position++
						if buffer[position] != rune('u') {
							goto l36
						}
						position++
						if buffer[position] != rune('r') {
							goto l36
						}
						position++
						if buffer[position] != rune('n') {
							goto l36
						}
						position++
						if !_rules[ruleAT_LEAST_ONE_SPACE]() {
							goto l36
						}
						if !_rules[ruleVALUE]() {
							goto l36
						}
						add(ruleRETURN_CLAUSE, position38)
					}
					goto l37
				l36:
					position, tokenIndex = position36, tokenIndex36
				}
			l37:
				if !_rules[ruleWHITESPACE_ANY]() {
					goto l30
				}
				if buffer[position] != rune('}') {
					goto l30
				}
				position++
				if !_rules[ruleWHITESPACE_ANY]() {
					goto l30
				}
				add(ruleBODY, position31)
			}
			return true
		l30:
			position, tokenIndex = position30, tokenIndex30
			return false
		},
		/* 8 STATEMENTS <- <(STATEMENT STATEMENTS*)> */
		func() bool {
			position39, tokenIndex39 := position, tokenIndex
			{
				position40 := position
				{
					position41 := position
					{
						position42, tokenIndex42 := position, tokenIndex
						{
							position44 := position
							{
								position45 := position
								{
									position46, tokenIndex46 := position, tokenIndex
									if buffer[position] != rune('a') {
										goto l47
									}
									position++
									if buffer[position] != rune('r') {
										goto l47
									}
									position++
									if buffer[position] != rune('r') {
										goto l47
									}
									position++
									if !_rules[ruleAT_LEAST_ONE_SPACE]() {
										goto l47
									}
									if !_rules[ruleID]() {
										goto l47
									}
									if buffer[position] != rune('[') {
										goto l47
									}
									position++
									if !_rules[ruleINDEXABLE]() {
										goto l47
									}
									if buffer[position] != rune(']') {
										goto l47
									}
									position++
									goto l46
								l47:
									position, tokenIndex = position46, tokenIndex46
									if !_rules[ruleID]() {
										goto l43
									}
								}
							l46:
								add(ruleASSIGNABLE, position45)
							}
							if !_rules[ruleJUST_SPACES]() {
								goto l43
							}
							if buffer[position] != rune('=') {
								goto l43
							}
							position++
							if !_rules[ruleJUST_SPACES]() {
								goto l43
							}
							if !_rules[ruleVALUE]() {
								goto l43
							}
							add(ruleASSIGNMENT, position44)
						}
						if !_rules[ruleWHITESPACE_ANY]() {
							goto l43
						}
						goto l42
					l43:
						position, tokenIndex = position42, tokenIndex42
						{
							switch buffer[position] {
							case 'p':
								{
									position49 := position
									if buffer[position] != rune('p') {
										goto l39
									}
									position++
									if buffer[position] != rune('r') {
										goto l39
									}
									position++
									if buffer[position] != rune('i') {
										goto l39
									}
									position++
									if buffer[position] != rune('n') {
										goto l39
									}
									position++
									if buffer[position] != rune('t') {
										goto l39
									}
									position++
									if buffer[position] != rune('(') {
										goto l39
									}
									position++
									if !_rules[ruleWHITESPACE_ANY]() {
										goto l39
									}
									{
										position50, tokenIndex50 := position, tokenIndex
										if !_rules[ruleVALUE]() {
											goto l50
										}
										goto l51
									l50:
										position, tokenIndex = position50, tokenIndex50
									}
								l51:
									if !_rules[ruleWHITESPACE_ANY]() {
										goto l39
									}
									if buffer[position] != rune(')') {
										goto l39
									}
									position++
									add(rulePRINT_STATEMENT, position49)
								}
								if !_rules[ruleWHITESPACE_ANY]() {
									goto l39
								}
							case 'c':
								if !_rules[ruleFUNC_CALL]() {
									goto l39
								}
								if !_rules[ruleWHITESPACE_ANY]() {
									goto l39
								}
							case 'w':
								{
									position52 := position
									if buffer[position] != rune('w') {
										goto l39
									}
									position++
									if buffer[position] != rune('h') {
										goto l39
									}
									position++
									if buffer[position] != rune('i') {
										goto l39
									}
									position++
									if buffer[position] != rune('l') {
										goto l39
									}
									position++
									if buffer[position] != rune('e') {
										goto l39
									}
									position++
									if !_rules[ruleAT_LEAST_ONE_SPACE]() {
										goto l39
									}
									if !_rules[ruleBOOL_EXPRESSION]() {
										goto l39
									}
									if !_rules[ruleAT_LEAST_ONE_SPACE]() {
										goto l39
									}
									if !_rules[ruleBODY]() {
										goto l39
									}
									if !_rules[ruleWHITESPACE_ANY]() {
										goto l39
									}
									add(ruleWHILE_STATEMENT, position52)
								}
							default:
								{
									position53 := position
									if buffer[position] != rune('i') {
										goto l39
									}
									position++
									if buffer[position] != rune('f') {
										goto l39
									}
									position++
									if !_rules[ruleAT_LEAST_ONE_SPACE]() {
										goto l39
									}
									if !_rules[ruleBOOL_EXPRESSION]() {
										goto l39
									}
									if !_rules[ruleAT_LEAST_ONE_SPACE]() {
										goto l39
									}
									if !_rules[ruleBODY]() {
										goto l39
									}
									{
										position54, tokenIndex54 := position, tokenIndex
										{
											position56 := position
											if !_rules[ruleWHITESPACE_ANY]() {
												goto l54
											}
											if buffer[position] != rune('e') {
												goto l54
											}
											position++
											if buffer[position] != rune('l') {
												goto l54
											}
											position++
											if buffer[position] != rune('s') {
												goto l54
											}
											position++
											if buffer[position] != rune('e') {
												goto l54
											}
											position++
											if !_rules[ruleWHITESPACE_ANY]() {
												goto l54
											}
											if !_rules[ruleBODY]() {
												goto l54
											}
											add(ruleELSECLAUSE, position56)
										}
										goto l55
									l54:
										position, tokenIndex = position54, tokenIndex54
									}
								l55:
									if !_rules[ruleWHITESPACE_ANY]() {
										goto l39
									}
									add(ruleIF_STATEMENT, position53)
								}
							}
						}
